--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="Gtjemmc_-LbIXq2AW4GxdOvBVV6T4bIO1SaY6UQ-2TI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>News Kolkata Blog</title>
   <style>
