--- a/Understanding-the-Different-Types-of-Electrical-Control-Panels-in-Industrial-Applications.html
+++ b/Understanding-the-Different-Types-of-Electrical-Control-Panels-in-Industrial-Applications.html
@@ -1,6 +1,7 @@
 <html lang='en'>
 <head><meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+<meta name="google-site-verification" content="Gtjemmc_-LbIXq2AW4GxdOvBVV6T4bIO1SaY6UQ-2TI" />
 <title>Understanding the Different Types of Electrical Control Panels in Industrial Applications</title>
 </head>
 <body>
